# autonomous-data-scientist

./: .gitignore  CLAUDE.txt  Dockerfile  README.md  backend.bat  config.py  frontend.bat  main.py  pyproject.toml  render.yaml  requirements.txt  streamlit_app.py
.devcontainer/: devcontainer.json
api/: routes.py  session.py
backend/: .dockerignore  config.py  limiter.py  main.py  render.yaml  requirements.txt  service-account.example.json
backend/api/: auth.py  routes.py  schemas.py  session.py  utils.py
backend/core/: agent_graph.py  state.py
backend/llm/: explain_results.py  understand_data.py
backend/pipeline/: data_cleaning.py  eda.py  feature_engineering.py  model_evaluation.py  model_training.py
core/: agent_graph.py  state.py
frontend/: dashboard.html  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ProtectedRoute.tsx
frontend/src/components/ui/: auth-fuse.tsx  demo.tsx  evervault-card.tsx  splite.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/features/chat/components/: ChatPanel.tsx
frontend/src/features/results/components/: AIExplanationTab.tsx  EDATab.tsx  ModelPerformanceTab.tsx  PlotsTab.tsx  PredictionsTab.tsx  (+1 more)
frontend/src/pages/: AuthPage.tsx  ConfigurePage.tsx  HomePage.tsx  Layout.tsx  ResultsPage.tsx
frontend/src/services/: api.ts
llm/: explain_results.py  understand_data.py
pipeline/: data_cleaning.py  eda.py  feature_engineering.py  model_evaluation.py  model_training.py
ui/: chatbot.py  components.py  styles.py
