[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous-data-scientist"
version = "0.1.0"
description = "A production-grade autonomous data scientist agent."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "langgraph",
    "langchain",
    "langchain_groq",
    "streamlit",
    "pandas",
    "numpy",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "xgboost",
    "python-dotenv",
    "tabulate",
    "pydantic-settings"
]

[tool.setuptools.packages.find]
where = ["src"]
